@@ -1,1 +1,2 @@
 //Bone helmet is too weak with 1 ap.
+Banana peels can be abused.
