@@ -1280,18 +1280,19 @@ inputfile& operator>>(inputfile& SaveFile, emitter& Emitter)
   return SaveFile;
 }
 
-void lsquare::SpillFluid(material* Liquid, ushort HitPercent, character* Spiller)
+void lsquare::SpillFluid(character* Spiller, material* Liquid, ushort HitPercent)
 {
   SpillFluid(1, Liquid->GetColor(), 5, 60);
-  character* CharHere = GetCharacter();
-  if(CharHere && (RAND() % 100) > 99 - short(HitPercent))
+
+  if(GetCharacter() && HitPercent + RAND() % 100 > 99)
     {
       if(Spiller)
-	Spiller->Hostility(CharHere);
-      CharHere->ReceiveFluidSpill(Liquid, HitPercent);
-    }
-  GetStack()->ReceiveFluidSpill(Liquid);
+	Spiller->Hostility(GetCharacter());
 
+      GetCharacter()->ReceiveFluidSpill(Liquid, HitPercent);
+    }
+
+  GetStack()->ReceiveFluidSpill(Liquid);
   delete Liquid;
 }
 
@@ -1299,5 +1300,3 @@ bool lsquare::IsDark() const
 {
   return !Luminance || (GetRed24(Luminance) < LIGHT_BORDER && GetGreen24(Luminance) < LIGHT_BORDER && GetBlue24(Luminance) < LIGHT_BORDER);
 }
-
-
