@@ -71,7 +71,7 @@ void material::EatEffect(character* Eater, ulong Amount, float NPModifier)
   Amount = Volume > Amount ? Amount : Volume;
   Effect(Eater, Amount);
   Eater->ReceiveNutrition(long(float(GetNutritionValue()) * Amount * NPModifier / 100000));
-  Volume -= Amount;
+  SetVolume(Volume - Amount);
 }
 
 bool material::HitEffect(character* Enemy)
